--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -55,6 +55,7 @@ jobs:
         with:
           node-version: "lts/*"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
+          working-directory: sudoku-puzzle-app
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
