--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "sudoku-puzzle-app",
-  "homepage": "https://juliecmy.github.io/sudoku-puzzle-game/",
+  "name": "sudoku-puzzle-game",
   "version": "0.1.0",
   "private": true,
   "scripts": {
